cdbs (0.4.60) unstable; urgency=low

  * Relax perlmodule.mk build-dependency on perl to be unversioned
    (following bug#525190 pending for debian-policy).

 -- Jonas Smedegaard <dr@jones.dk>  Sun, 02 Aug 2009 13:51:56 +0200

cdbs (0.4.59) unstable; urgency=low

  * Defer setting DEB_BUILD_DEPENDENCIES in buildcore.mk (use ?= not =),
    to respect prior override. Closes: bug#205395, thanks to Robert
    Jordens, and to Joachim Breitner for reviving.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 21 Jul 2009 18:49:44 +0200

cdbs (0.4.58) unstable; urgency=high

  * Revert change in 0.4.57 ensuring post-patches finished before
    configure in autotools.mk: Causes configure to be invoked again
    after build.
  * Set urgency=high as this cause FTBFS for packages not supporting
    multiple configure runs (see bugs #537011, #536992, #536963).

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 14 Jul 2009 20:31:47 +0200

cdbs (0.4.57) unstable; urgency=low

  [ Jonas Smedegaard ]
  * Have debhelper.mk build-depend on cdbs 0.4.53 or newer for DH v7.
  * Relax build-dependencies (e.g. drop versioning when satisfied in
    oldstable and not explicitly required by policy):
    + keep old versioning for perl (required by policy)
    + relax slightly versioning for python
    + drop some old versionings for debhelper, gnulib, type-handling,
      cdbs and patchutils
  * Adjust gnome.mk to extend build-dependencies after including classes
    which initialize them.
  * Append trunk in Vcs-* stanzas of debian/control, and use viewsvn
    (not vswn) in Vcs-Browser stanza.  Closes: bug#531692.
  * Build-depend on python-all-dev (not python2.4-dev or python2.5-dev),
    and generalize python-distutils tests to try all available versions
    of python.  Closes: bug#525855, thanks to Martin Pitt.
  * Use $(filter ...) instead of $(findstring ...) to extract space-
    separated options from DEB_BUILD_OPTIONS in debian/rules.